--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -312,23 +312,6 @@ template {
  */
 
 /**
- * 1. Prevent padding and border from affecting element width
- * https://goo.gl/pYtbK7
- * 2. Change the default font family in all browsers (opinionated)
- */
-
-html {
-  box-sizing: border-box; /* 1 */
-  font-family: sans-serif; /* 2 */
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-/**
  * Removes the default spacing and border for appropriate elements.
  */
 
@@ -336,13 +319,15 @@ blockquote,
 h1,
 h2,
 h3,
+h4,
 h5,
 p {
   margin: 0;
 }
 
 button {
-  background: transparent;
+  background-color: transparent;
+  background-image: none;
   padding: 0;
 }
 
@@ -368,38 +353,50 @@ ul {
  */
 
 /**
- * 1. Use the system font stack as a sane default.
+ * 1. Use the user's configured `sans` font-family (with Tailwind's default
+ *    sans-serif font stack as a fallback) as a sane default.
  * 2. Use Tailwind's default "normal" line-height so the user isn't forced
- * to override it to ensure consistency even when using the default theme.
+ *    to override it to ensure consistency even when using the default theme.
  */
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
   line-height: 1.5; /* 2 */
 }
 
 /**
- * Allow adding a border to an element by just adding a border-width.
+ * 1. Prevent padding and border from affecting element width.
  *
- * By default, the way the browser specifies that an element should have no
- * border is by setting it's border-style to `none` in the user-agent
- * stylesheet.
+ *    We used to set this in the html element and inherit from
+ *    the parent element for everything else. This caused issues
+ *    in shadow-dom-enhanced elements like <details> where the content
+ *    is wrapped by a div with box-sizing set to `content-box`.
  *
- * In order to easily add borders to elements by just setting the `border-width`
- * property, we change the default border-style for all elements to `solid`, and
- * use border-width to hide them instead. This way our `border` utilities only
- * need to set the `border-width` property instead of the entire `border`
- * shorthand, making our border utilities much more straightforward to compose.
+ *    https://github.com/mozdevs/cssremedy/issues/4
  *
- * https://github.com/tailwindcss/tailwindcss/pull/116
+ *
+ * 2. Allow adding a border to an element by just adding a border-width.
+ *
+ *    By default, the way the browser specifies that an element should have no
+ *    border is by setting it's border-style to `none` in the user-agent
+ *    stylesheet.
+ *
+ *    In order to easily add borders to elements by just setting the `border-width`
+ *    property, we change the default border-style for all elements to `solid`, and
+ *    use border-width to hide them instead. This way our `border` utilities only
+ *    need to set the `border-width` property instead of the entire `border`
+ *    shorthand, making our border utilities much more straightforward to compose.
+ *
+ *    https://github.com/tailwindcss/tailwindcss/pull/116
  */
 
 *,
-*::before,
-*::after {
-  border-width: 0;
-  border-style: solid;
-  border-color: #e2e8f0;
+::before,
+::after {
+  box-sizing: border-box; /* 1 */
+  border-width: 0; /* 2 */
+  border-style: solid; /* 2 */
+  border-color: #e2e8f0; /* 2 */
 }
 
 /*
@@ -418,10 +415,6 @@ html {
 
 img {
   border-style: solid;
-}
-
-input::-webkit-input-placeholder {
-  color: #a0aec0;
 }
 
 input::-moz-placeholder {
@@ -452,6 +445,7 @@ table {
 h1,
 h2,
 h3,
+h4,
 h5 {
   font-size: inherit;
   font-weight: inherit;
@@ -562,23 +556,33 @@ video {
 }
 
 .bg-black {
+  --bg-opacity: 1;
   background-color: #000;
+  background-color: rgba(0, 0, 0, var(--bg-opacity));
 }
 
 .bg-dark-tar {
+  --bg-opacity: 1;
   background-color: #080808;
+  background-color: rgba(8, 8, 8, var(--bg-opacity));
 }
 
 .bg-dark-street {
+  --bg-opacity: 1;
   background-color: #212121;
+  background-color: rgba(33, 33, 33, var(--bg-opacity));
 }
 
 .bg-dark-coal {
+  --bg-opacity: 1;
   background-color: #383838;
+  background-color: rgba(56, 56, 56, var(--bg-opacity));
 }
 
 .bg-dark-concrete {
+  --bg-opacity: 1;
   background-color: #f2f2f2;
+  background-color: rgba(242, 242, 242, var(--bg-opacity));
 }
 
 .bg-no-repeat {
@@ -590,19 +594,27 @@ video {
 }
 
 .border-purple {
+  --border-opacity: 1;
   border-color: #782f92;
+  border-color: rgba(120, 47, 146, var(--border-opacity));
 }
 
 .border-aqua {
+  --border-opacity: 1;
   border-color: #6dc9c7;
+  border-color: rgba(109, 201, 199, var(--border-opacity));
 }
 
 .border-dark-coal {
+  --border-opacity: 1;
   border-color: #383838;
+  border-color: rgba(56, 56, 56, var(--border-opacity));
 }
 
 .border-dark-concrete {
+  --border-opacity: 1;
   border-color: #f2f2f2;
+  border-color: rgba(242, 242, 242, var(--border-opacity));
 }
 
 .rounded-lg {
@@ -719,6 +731,42 @@ video {
   height: 1em;
 }
 
+.text-0 {
+  font-size: 0px;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+}
+
+.text-base {
+  font-size: 1rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+}
+
+.text-3\/5 {
+  font-size: 60%;
+}
+
+.text-r5xl {
+  font-size: 3em;
+}
+
 .leading-none {
   line-height: 1;
 }
@@ -815,6 +863,10 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mt-6 {
@@ -943,67 +995,45 @@ video {
 }
 
 .text-purple {
+  --text-opacity: 1;
   color: #782f92;
+  color: rgba(120, 47, 146, var(--text-opacity));
 }
 
 .text-purple-lilac {
+  --text-opacity: 1;
   color: #d3beda;
+  color: rgba(211, 190, 218, var(--text-opacity));
 }
 
 .text-aqua {
+  --text-opacity: 1;
   color: #6dc9c7;
+  color: rgba(109, 201, 199, var(--text-opacity));
 }
 
 .text-dark-silver {
+  --text-opacity: 1;
   color: #c7c7c7;
+  color: rgba(199, 199, 199, var(--text-opacity));
 }
 
 .text-dark-concrete {
+  --text-opacity: 1;
   color: #f2f2f2;
+  color: rgba(242, 242, 242, var(--text-opacity));
 }
 
 .hover\:text-purple:hover {
+  --text-opacity: 1;
   color: #782f92;
+  color: rgba(120, 47, 146, var(--text-opacity));
 }
 
 .hover\:text-aqua:hover {
+  --text-opacity: 1;
   color: #6dc9c7;
-}
-
-.text-0 {
-  font-size: 0px;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-}
-
-.text-base {
-  font-size: 1rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-}
-
-.text-3\/5 {
-  font-size: 60%;
-}
-
-.text-r5xl {
-  font-size: 3em;
+  color: rgba(109, 201, 199, var(--text-opacity));
 }
 
 .italic {
@@ -1075,6 +1105,17 @@ video {
   z-index: 50;
 }
 
+.transform {
+  --transform-translate-x: 0;
+  --transform-translate-y: 0;
+  --transform-rotate: 0;
+  --transform-skew-x: 0;
+  --transform-skew-y: 0;
+  --transform-scale-x: 1;
+  --transform-scale-y: 1;
+  transform: translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y)) rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y)) scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
+}
+
 /* ==========================================================================
    Global Styles
    ========================================================================== */
@@ -1128,23 +1169,28 @@ p {
 
 /* Global */
 
-a { text-decoration: none; color: #6dc9c7;
+a { text-decoration: none; --text-opacity: 1; color: #6dc9c7; color: rgba(109, 201, 199, var(--text-opacity));
 }
 
-a:hover { color: #782f92;
+a:hover { --text-opacity: 1; color: #782f92; color: rgba(120, 47, 146, var(--text-opacity));
 }
 
 .article #contents h1,
 .article #contents h2,
-.article #contents h3 {
+.article #contents h3,
+.article #contents h4 {
   display: block;
   font-weight: 700;
   text-transform: lowercase;
   margin-top: -0.5rem;
+  --text-opacity: 1;
   color: #782f92;
+  color: rgba(120, 47, 146, var(--text-opacity));
   letter-spacing: 0.05em;
   border-bottom-width: 1px;
+  --border-opacity: 1;
   border-color: #383838;
+  border-color: rgba(56, 56, 56, var(--border-opacity));
   line-height: 1.375;
   margin-top: 1.5rem;
   font-size: 1.5rem;
@@ -1166,7 +1212,10 @@ a:hover { color: #782f92;
 .mixin\:page-layout { max-width: 1150px; margin-left: auto; margin-right: auto; padding-left: 1.5rem; padding-right: 1.5rem;
 }
 
-.mixin\:text-headline { display: block; font-weight: 700; text-transform: lowercase; margin-top: -0.5rem; color: #782f92; letter-spacing: 0.05em;
+.mixin\:text-headline { display: block; font-weight: 700; text-transform: lowercase; margin-top: -0.5rem; --text-opacity: 1; color: #782f92; color: rgba(120, 47, 146, var(--text-opacity)); letter-spacing: 0.05em;
+}
+
+.mixin\:text-subtitle { display: block; text-transform: lowercase; margin-top: -0.5rem; --text-opacity: 1; color: #5e5e5e; color: rgba(94, 94, 94, var(--text-opacity)); letter-spacing: 0.05em;
 }
 
 .text-clear-light { color: rgba(255, 255, 255, 0.55);
@@ -1386,6 +1435,14 @@ ul.list-custom-inline li + li::before {
     flex-wrap: nowrap;
   }
 
+  .sm\:text-sm {
+    font-size: 0.875rem;
+  }
+
+  .sm\:text-full {
+    font-size: 100%;
+  }
+
   .sm\:leading-normal {
     line-height: 1.5;
   }
@@ -1406,14 +1463,6 @@ ul.list-custom-inline li + li::before {
     max-width: 24rem;
   }
 
-  .sm\:text-sm {
-    font-size: 0.875rem;
-  }
-
-  .sm\:text-full {
-    font-size: 100%;
-  }
-
   .sm\:truncate {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -1432,10 +1481,6 @@ ul.list-custom-inline li + li::before {
 }
 
 @media (min-width: 768px) {
-
-  .md\:border-none {
-    border-style: none;
-  }
 
   .md\:inline-block {
     display: inline-block;
@@ -1469,19 +1514,12 @@ ul.list-custom-inline li + li::before {
     text-align: justify;
   }
 
-  .md\:text-base {
-    font-size: 1rem;
-  }
-
   .md\:whitespace-no-wrap {
     white-space: nowrap;
   }
 
   .md\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .md\:bg-img-pattern { background-image: url("/static/images/timmons-logo-pattern.png");
   }
 
   /* .col-count-2 { column-count: 2; } */
